change name to debian10_cpp_basic

--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -48,7 +48,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/debian_cpp_basic:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/debian10_cpp_basic:latest
       
       - name: Image digest
         run: |
