--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -32,6 +32,16 @@ jobs:
           ip a 
           docker --version
       
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ secrets.DOCKER_HUB_USERNAME }}/debian10_cpp_basic
+          tags: |
+            type=raw,value={{date 'YYYY.MM.DD'}}
+            type=raw,value=latest
+
+      
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -48,7 +58,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/debian10_cpp_basic:latest
+          tags: ${{ steps.meta.outputs.tags }}
       
       - name: Image digest
         run: |
